# file-guardian

./: .gitignore  Cargo.toml  README.md  db.json  rustfmt.toml
client/: Cargo.toml  README.md
client/src/: cli.rs  client.rs  db.rs  file.rs  main.rs  utils.rs  verifier.rs
merkle-tree/: Cargo.toml  README.md
merkle-tree/src/: error.rs  hasher.rs  lib.rs  tree.rs
server/: Cargo.toml  README.md
server/src/: main.rs  server.rs  store.rs
server_store/96b2874ed9d2cb4d68156d68e3dffa0998d2f7cd17855394e9928cd02ddbd7e4/: tree.json
