[package]
name        = "client"
edition     = { workspace = true }
authors     = { workspace = true }
version     = "0.1.0"
description = "A Cli client to upload/download files to a server and verify their integrity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = { workspace = "true", features = ["derive"] }
anyhow      = { workspace = "true" }
merkle-tree = { version = "0.1.0", path = "../merkle-tree" }
serde       = { workspace = "true" }
serde_json  = { workspace = "true" }

[dev-dependencies]
tempfile = "3.5.0"
