[package]
name        = "client"
edition     = { workspace = true }
authors     = { workspace = true }
version     = "0.1.0"
description = "A Cli client to upload/download files to a server and verify their integrity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = { version = "4.3.0", features = ["derive"] }
anyhow      = "1.0.71"
merkle-tree = { version = "0.1.0", path = "../merkle-tree" }
serde       = "1.0.163"
serde_json  = "1.0.96"
hex         = "0.4.3"

[dev-dependencies]
tempfile = "3.5.0"
