[package]
name    = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle-tree = { version = "0.1.0", path = "../merkle-tree" }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio = { version = "1.28.2", features = ["full"] }
