[package]
name    = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle-tree = { version = "0.1.0", path = "../merkle-tree" }
anyhow      = "1.0.71"
serde       = "1.0.163"
serde_json  = "1.0.96"
tokio       = { version = "1.28.2", features = ["full"] }
hex         = "0.4.3"
